优化代码, 合并 lua 格式化.

--- a/package.json
+++ b/package.json
@@ -40,5 +40,7 @@
         "url": "https://github.com/jcrom/emp-prettydiff/"
     },
     "test": "node test/lint.js",
-    "version": "0.0.0"
+    "version": "0.0.0",
+    "dependencies": {
+    }
 }
